--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Coding Quiz on JavaScript Fundaments</title>
-    <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>Coding Quiz on JavaScript Fundaments</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 
 <body>
- <header>
+  <header>
     <div class="top">
-    <!-- create top bar with "View hightscores" to the leftand "timer" to the right-->
-        <h2>View hightscores</h2>
-        <h3>Timer</h3>
+      <!-- create top bar with "View hightscores" to the leftand "timer" to the right-->
+      <h2>View hightscores</h2>
+      <h3 id="timer">Timer</h3>
     </div>
- </header>       
- <main>
-  <section class="center">
-     <h2>Coding Quiz Chanllenge</h2>
-     <p>Try to answer the following code-related questions within the time <br/>
-    limit. Keep in minde that incorect answers  will penalize your scoretime<br/>
-    by ten seconds!</p>
-    <button>Start Quiz</button>
-  </section>
-  <section>
-    <ol>
-        <li>
-            
-        </li>
-    </ol>
-  </section>
- </main>
+  </header>
+  <main>
+    <section id="start-menu" class="center">
+      <h2>Coding Quiz Chanllenge</h2>
+      <p>Try to answer the following code-related questions within the time <br />
+        limit. Keep in minde that incorect answers will penalize your scoretime<br />
+        by ten seconds!</p>
+      <button id="start-btn">Start Quiz</button>
+    </section>
+    <!-- create bar with the questions -->
+    <section id="question-section" class="hide">
+      <h2 id="question-h2"></h2>
+      <ol id="answer-list">
+      </ol>
+    </section>
+  </main>
+  <script src="./script.js"></script>
 </body>
+
 </html>
